# ai-dev-cycle-framework

./: .gitignore  CLAUDE.md  Makefile  README.md  devcycle.config.json  feature-ideas.md  pyproject.toml
.claude/commands/: devcycle-finalize.md  devcycle-full-loop.md  devcycle-review-fix.md  devcycle-start.md
.github/workflows/: devcycle-check.yml  devcycle-finalize.yml  nightly-review.yml  pr-review.yml
dev_cycle/: __init__.py  ai_runner.py  chain.py  choice_ui.py  cli.py  completion.py  config.py  cycle.py  doctor.py  dual_output.py  i18n.py  orchestrator.py  review_importer.py  review_orchestrator.py  spec_reader.py  state_machine.py  turbo.py
docs/: operational-playbook.md  release-checklist.md  repositioning.md  self-hosting.md  version-history.md
ops/dev-cycles/: index.jsonl  run_summary.json  run_summary.md
ops/dev-cycles/dev-20260331-140922_20260331-140922_turbo-smoke-test/: claude-implementation-summary.md  codex-followup.md  codex-review.md  git.diff  (+3 more)
ops/rollbacks/: rollback-20260401-052246.json  rollback-20260401-052246.md
scripts/: review-and-import.sh
scripts/hooks/: post-commit  post-prepare-review.sample
templates/project/: devcycle.config.json
tests/: conftest.py  test_ai_runner.py  test_chain.py  test_choice_ui.py  test_claude_integration.py  test_cli.py  test_completion.py  test_config.py  test_cycle.py  test_doctor.py  test_dual_output.py  test_i18n.py  test_integration.py  test_non_interactive.py  test_orchestrator.py  test_review_importer.py  test_review_orchestrator.py  test_spec_reader.py  test_state_machine.py  test_turbo.py
(+27 files in other folders)
