[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dev-cycle-framework"
version = "0.1.0"
description = "Multi-project AI development cycle framework with self-application support"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
devcycle = "dev_cycle.cli:main"

[tool.setuptools.packages.find]
include = ["dev_cycle*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
